[package]
name = "loggers"
version = "0.1.0"
edition = "2021"
authors = ["akitenkrad"]
description = "simple logger"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
log = { version = "0.4.6", features = ["std"] }
serde_json = "1.0.128"
